change toList to collect