@@ -11,6 +11,7 @@ import seasky.cparser.cparser.entry.Variable;
 import seasky.cparser.cparser.exception.CypherIndexOutofBoundException;
 import seasky.cparser.cparser.exception.CypherParseException;
 import seasky.cparser.cparser.tool.Counter;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -57,7 +58,7 @@ public class Delete extends Clause {
 		if (vars.size() == 0) return "";
         StringBuilder sb = new StringBuilder();
         sb.append("DELETE ");
-        sb.append(String.join(", ", vars.stream().map((v) -> v.toString()).toList()));
+        sb.append(String.join(", ", vars.stream().map((v) -> v.toString()).collect(Collectors.toList())));
 		return sb.toString();
 	}
 	
